styles.css
:root {
    --white: #fff;
    --black: #000;
    --main-background: linear-gradient(135deg, #2c3e50 0%, #4ca1af 100%);
    --accent: #f4b942;
    --dark-text: #2c3e50;
}


body {
    text-align: center;
    font-family: 'Happy Monkey', cursive;
    background: var(--main-background);
    color: var(--white)
}


.main-wrapper {
    max-width: 1200px;
    margin: 0 auto;
    display: flex;  
    position: relative;
    padding: 0 10px;
}

.row-1 {
    flex: 1;
}

.row-2 {
    flex: 1;

} 

/* Sticky position */

.sticky {
    position: sticky;
    top: 0;
}



h1, h2, h3, h4, p {
    text-shadow: 0 0 1px var(--black);
}
h4 {
    font-size: 1.2rem;
}

.dark-text {
    color: var(--dark-text);
    animation-name: fade-in;
    animation-duration: 3s;
    animation-timing-function: ease;
    animation-delay: 0.3s;
}

#bff-img {
    max-width: 300px;
    border-radius: 50%;
    border: 6px solid var(--accent);
    margin-bottom: 10px;
    animation-name: spin;
    animation-duration: 2s;
    animation-timing-function: linear;
    animation-delay: 1s;
}

#bday-age {
    background: var(--accent);
    padding: 5px 10px;
    border-radius: 5px;
    margin: 5px 0 10px 0;
}

#bday-date {
    margin: 0;
    background: var(--accent);
    padding: 5px 10px;
    border-radius: 5px;
}

#header {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.gift-section {
    margin-top: 50px;
}


.gift-title {
    margin-bottom: 10px;
}

.gift-hint {
    margin-top: 0;
}

#gift-img-cheers {
    height: 200px;
}

.gift-img {
    margin: 20px auto;
    max-width: 400px;
    height: 400px;
    border: 6px solid var(--white);
    border-radius: 10px;
    background-image: url("images/gift-cover.jpg");
    background-size: cover;
    animation-name: jiggle;
    animation-duration: 1.5s;
    animation-timing-function: ease;
    animation-delay: 0.5;
    animation-iteration-count: infinite;
    
}

.gift-img:hover {
    animation-play-state: paused;

}

#gift-img-happy:hover {
    background-image: url("images/happy.gif");
}

#gift-img-hot:hover {
    background-image: url("images/hot.gif");
}

#gift-img-genius:hover {
    background-image: url("images/genius.gif");
}

#gift-img-badass:hover {
    background-image: url("images/badass.gif");
}

#gift-img-cheers:hover {
    background-image: url("images/cheers.gif");
}

.bottom-space {
    margin-bottom: 100px;

}


/* animations */

@keyframes spin {
    0% {
    }

    50% {
        scale: 1.1;
        transform: rotate(0);
    }

    100% {
        transform: rotate(360deg);
        scale: 1.1;
    }
}


@keyframes jiggle {
    0%{
        transform: skew(0deg,0deg);
    }

    50% {
        transform: skew(0.9deg,0.5deg);
    }

    100% {
        transform: skew(0deg,0deg);
    }
}

@keyframes fade-in {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}


/* Responsive  */

@media screen and (max-width: 640px)  {
.main-wrapper {
     flex-direction: column;
     position: static;
     background: black;
     

}

.row {
    flex: 100%;
}

}
/* 

/* Sticky position */

.sticky {
    position: static;
    top: 0;
}

